SWB4/swb/SWBNLP/src/org/semanticwb/nlp/analysis/ComplexParser.java
/**
 * SemanticWebBuilder es una plataforma para el desarrollo de portales y aplicaciones de integración,
 * colaboración y conocimiento, que gracias al uso de tecnología semántica puede generar contextos de
 * información alrededor de algún tema de interés o bien integrar información y aplicaciones de diferentes
 * fuentes, donde a la información se le asigna un significado, de forma que pueda ser interpretada y
 * procesada por personas y/o sistemas, es una creación original del Fondo de Información y Documentación
 * para la Industria INFOTEC, cuyo registro se encuentra actualmente en trámite.
 *
 * INFOTEC pone a su disposición la herramienta SemanticWebBuilder a través de su licenciamiento abierto al público (‘open source’),
 * en virtud del cual, usted podrá usarlo en las mismas condiciones con que INFOTEC lo ha diseñado y puesto a su disposición;
 * aprender de él; distribuirlo a terceros; acceder a su código fuente y modificarlo, y combinarlo o enlazarlo con otro software,
 * todo ello de conformidad con los términos y condiciones de la LICENCIA ABIERTA AL PÚBLICO que otorga INFOTEC para la utilización
 * del SemanticWebBuilder 4.0.
 *
 * INFOTEC no otorga garantía sobre SemanticWebBuilder, de ninguna especie y naturaleza, ni implícita ni explícita,
 * siendo usted completamente responsable de la utilización que le dé y asumiendo la totalidad de los riesgos que puedan derivar
 * de la misma.
 *
 * Si usted tiene cualquier duda o comentario sobre SemanticWebBuilder, INFOTEC pone a su disposición la siguiente
 * dirección electrónica:
 *  http://www.semanticwebbuilder.org
 **/
package org.semanticwb.nlp.analysis;

import org.antlr.runtime.*;
import org.antlr.runtime.tree.*;

/**
 * An antlr natural language SparQl query parser. Most of the code for this
 * class and nested classes was generated automatically by antlr.
 * Visit http://www.antlr.org for details about each undocumented class element.
 * <p>
 * Un analizador de consultas SparQl en lenguaje natural generado por antlr.
 * La mayoría del código de esta clase y las clases anidadas fue generado
 * automáticamente por antlr. Visite http://www.antlr.org para obtener detalles
 * acerca de los elementos de esta clase que no están documentados.
 *
 * @author Hasdai Pacheco {haxdai@gmail.com}
 */
// $ANTLR 3.1.2 /home/hasdai/Documentos/INFOTEC/ComplexParser.g 2009-07-17 11:16:40
public class ComplexParser extends Parser {

    public static final String[] tokenNames = new String[]{
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "WHITESPACE", "SIGN", "SIGL", "SIGG", "SIGE", "SIGLE", "SIGGE", "PREC", "MODT", "PRED", "PREN", "MODE", "MODN", "MODO", "MODC", "BOL", "NUM", "LIT", "LBRK", "RBRK", "BVAR", "ORDOP", "DELY", "VAR", "LPAR", "RPAR", "DEL", "SIGI", "LIMIT", "SELECT", "ASIGN", "COMPL", "COMPG", "COMPLE", "COMPGE", "COMPAS", "PRECON", "PREDE", "OFFSET", "ORDER", "COMPNAME", "MODTO", "NAME", "COMPRNG", "INTERVAL"
    };
    public static final int INTERVAL = 48;
    public static final int SIGL = 6;
    public static final int PREC = 11;
    public static final int LPAR = 28;
    public static final int MODE = 15;
    public static final int COMPGE = 38;
    public static final int DELY = 26;
    public static final int SIGI = 31;
    public static final int ORDER = 43;
    public static final int COMPNAME = 44;
    public static final int SELECT = 33;
    public static final int COMPRNG = 47;
    public static final int COMPG = 36;
    public static final int SIGN = 5;
    public static final int COMPL = 35;
    public static final int DEL = 30;
    public static final int SIGE = 8;
    public static final int PRECON = 40;
    public static final int RBRK = 23;
    public static final int ASIGN = 34;
    public static final int MODO = 17;
    public static final int RPAR = 29;
    public static final int SIGGE = 10;
    public static final int MODN = 16;
    public static final int SIGG = 7;
    public static final int OFFSET = 42;
    public static final int PREDE = 41;
    public static final int COMPLE = 37;
    public static final int LIT = 21;
    public static final int BOL = 19;
    public static final int PRED = 13;
    public static final int SIGLE = 9;
    public static final int WHITESPACE = 4;
    public static final int ORDOP = 25;
    public static final int VAR = 27;
    public static final int MODT = 12;
    public static final int MODC = 18;
    public static final int PREN = 14;
    public static final int LBRK = 22;
    public static final int COMPAS = 39;
    public static final int EOF = -1;
    public static final int NUM = 20;
    public static final int MODTO = 45;
    public static final int NAME = 46;
    public static final int BVAR = 24;
    public static final int LIMIT = 32;

    // delegates
    // delegators
    public ComplexParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public ComplexParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);

    }
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }

    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() {
        return ComplexParser.tokenNames;
    }

    public String getGrammarFileName() {
        return "/home/hasdai/Documentos/INFOTEC/ComplexParser.g";
    }
    private int errCount = 0;
    private boolean precon = false;
    private boolean prede = false;

    /**
     * Overrides default displayRecognitionError method in ANTLR to count total
     * recognition errors.
     */
    public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
        errCount++;
    }

    /**
     *  Gets the number of total recognition errors.
     *  <p>
     *  Obtiene el número total de errores en el parseo.
     */
    public int getErrorCount() {
        return errCount;
    }

    /**
     * Verifies if query AST has node 'PRECON'.
     * <p>
     * Verifica si el AST de la consulta tiene un nodo 'PRECON'.
     */
    public boolean hasPrecon() {
        return precon;
    }

    /**
     * Verifies if query AST has node 'PREDE'.
     * <p>
     * Verifica si el AST de la consulta tiene un nodo 'PREDE'.
     */
    public boolean hasPrede() {
        return prede;
    }

    public static class squery_return extends ParserRuleReturnScope {

        Object tree;

        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "squery"
    // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:51:1: squery : ( ( limiter )? oquery ( modifier )? EOF -> ^( SELECT ( limiter )? oquery ( modifier )? ) | ( limiter )? pquery ( modifier )? EOF -> ^( SELECT ( limiter )? pquery ( modifier )? ) );
    public final ComplexParser.squery_return squery() throws RecognitionException {
        ComplexParser.squery_return retval = new ComplexParser.squery_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF4 = null;
        Token EOF8 = null;
        ComplexParser.limiter_return limiter1 = null;

        ComplexParser.oquery_return oquery2 = null;

        ComplexParser.modifier_return modifier3 = null;

        ComplexParser.limiter_return limiter5 = null;

        ComplexParser.pquery_return pquery6 = null;

        ComplexParser.modifier_return modifier7 = null;


        Object EOF4_tree = null;
        Object EOF8_tree = null;
        RewriteRuleTokenStream stream_EOF = new RewriteRuleTokenStream(adaptor, "token EOF");
        RewriteRuleSubtreeStream stream_oquery = new RewriteRuleSubtreeStream(adaptor, "rule oquery");
        RewriteRuleSubtreeStream stream_modifier = new RewriteRuleSubtreeStream(adaptor, "rule modifier");
        RewriteRuleSubtreeStream stream_pquery = new RewriteRuleSubtreeStream(adaptor, "rule pquery");
        RewriteRuleSubtreeStream stream_limiter = new RewriteRuleSubtreeStream(adaptor, "rule limiter");
        try {
            // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:52:1: ( ( limiter )? oquery ( modifier )? EOF -> ^( SELECT ( limiter )? oquery ( modifier )? ) | ( limiter )? pquery ( modifier )? EOF -> ^( SELECT ( limiter )? pquery ( modifier )? ) )
            int alt5 = 2;
            switch (input.LA(1)) {
                case NUM: {
                    switch (input.LA(2)) {
                        case BVAR:
                        case VAR: {
                            int LA5_3 = input.LA(3);

                            if ((LA5_3 == EOF || LA5_3 == PREC || LA5_3 == MODE || LA5_3 == MODO)) {
                                alt5 = 1;
                            } else if ((LA5_3 == PRED || LA5_3 == DEL)) {
                                alt5 = 2;
                            } else {
                                if (state.backtracking > 0) {
                                    state.failed = true;
                                    return retval;
                                }
                                NoViableAltException nvae =
                                        new NoViableAltException("", 5, 3, input);

                                throw nvae;
                            }
                        }
                        break;
                        case MODT: {
                            alt5 = 2;
                        }
                        break;
                        case EOF:
                        case MODE:
                        case MODO:
                        case LPAR: {
                            alt5 = 1;
                        }
                        break;
                        default:
                            if (state.backtracking > 0) {
                                state.failed = true;
                                return retval;
                            }
                            NoViableAltException nvae =
                                    new NoViableAltException("", 5, 1, input);

                            throw nvae;
                    }

                }
                break;
                case EOF:
                case MODE:
                case MODO:
                case LPAR: {
                    alt5 = 1;
                }
                break;
                case BVAR:
                case VAR: {
                    int LA5_3 = input.LA(2);

                    if ((LA5_3 == EOF || LA5_3 == PREC || LA5_3 == MODE || LA5_3 == MODO)) {
                        alt5 = 1;
                    } else if ((LA5_3 == PRED || LA5_3 == DEL)) {
                        alt5 = 2;
                    } else {
                        if (state.backtracking > 0) {
                            state.failed = true;
                            return retval;
                        }
                        NoViableAltException nvae =
                                new NoViableAltException("", 5, 3, input);

                        throw nvae;
                    }
                }
                break;
                case MODT: {
                    alt5 = 2;
                }
                break;
                default:
                    if (state.backtracking > 0) {
                        state.failed = true;
                        return retval;
                    }
                    NoViableAltException nvae =
                            new NoViableAltException("", 5, 0, input);

                    throw nvae;
            }

            switch (alt5) {
                case 1: // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:52:3: ( limiter )? oquery ( modifier )? EOF
                {
                    // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:52:3: ( limiter )?
                    int alt1 = 2;
                    int LA1_0 = input.LA(1);

                    if ((LA1_0 == NUM)) {
                        alt1 = 1;
                    }
                    switch (alt1) {
                        case 1: // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:0:0: limiter
                        {
                            pushFollow(FOLLOW_limiter_in_squery109);
                            limiter1 = limiter();

                            state._fsp--;
                            if (state.failed) {
                                return retval;
                            }
                            if (state.backtracking == 0) {
                                stream_limiter.add(limiter1.getTree());
                            }

                        }
                        break;

                    }

                    pushFollow(FOLLOW_oquery_in_squery112);
                    oquery2 = oquery();

                    state._fsp--;
                    if (state.failed) {
                        return retval;
                    }
                    if (state.backtracking == 0) {
                        stream_oquery.add(oquery2.getTree());
                    }
                    // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:52:19: ( modifier )?
                    int alt2 = 2;
                    int LA2_0 = input.LA(1);

                    if ((LA2_0 == MODE || LA2_0 == MODO)) {
                        alt2 = 1;
                    }
                    switch (alt2) {
                        case 1: // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:0:0: modifier
                        {
                            pushFollow(FOLLOW_modifier_in_squery114);
                            modifier3 = modifier();

                            state._fsp--;
                            if (state.failed) {
                                return retval;
                            }
                            if (state.backtracking == 0) {
                                stream_modifier.add(modifier3.getTree());
                            }

                        }
                        break;

                    }

                    EOF4 = (Token) match(input, EOF, FOLLOW_EOF_in_squery117);
                    if (state.failed) {
                        return retval;
                    }
                    if (state.backtracking == 0) {
                        stream_EOF.add(EOF4);
                    }



                    // AST REWRITE
                    // elements: oquery, modifier, limiter
                    // token labels:
                    // rule labels: retval
                    // token list labels:
                    // rule list labels:
                    // wildcard labels:
                    if (state.backtracking == 0) {
                        retval.tree = root_0;
                        RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                        root_0 = (Object) adaptor.nil();
                        // 52:33: -> ^( SELECT ( limiter )? oquery ( modifier )? )
                        {
                            // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:52:36: ^( SELECT ( limiter )? oquery ( modifier )? )
                            {
                                Object root_1 = (Object) adaptor.nil();
                                root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(SELECT, "SELECT"), root_1);

                                // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:52:45: ( limiter )?
                                if (stream_limiter.hasNext()) {
                                    adaptor.addChild(root_1, stream_limiter.nextTree());

                                }
                                stream_limiter.reset();
                                adaptor.addChild(root_1, stream_oquery.nextTree());
                                // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:52:61: ( modifier )?
                                if (stream_modifier.hasNext()) {
                                    adaptor.addChild(root_1, stream_modifier.nextTree());

                                }
                                stream_modifier.reset();

                                adaptor.addChild(root_0, root_1);
                            }

                        }

                        retval.tree = root_0;
                    }
                }
                break;
                case 2: // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:53:3: ( limiter )? pquery ( modifier )? EOF
                {
                    // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:53:3: ( limiter )?
                    int alt3 = 2;
                    int LA3_0 = input.LA(1);

                    if ((LA3_0 == NUM)) {
                        alt3 = 1;
                    }
                    switch (alt3) {
                        case 1: // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:0:0: limiter
                        {
                            pushFollow(FOLLOW_limiter_in_squery135);
                            limiter5 = limiter();

                            state._fsp--;
                            if (state.failed) {
                                return retval;
                            }
                            if (state.backtracking == 0) {
                                stream_limiter.add(limiter5.getTree());
                            }

                        }
                        break;

                    }

                    pushFollow(FOLLOW_pquery_in_squery138);
                    pquery6 = pquery();

                    state._fsp--;
                    if (state.failed) {
                        return retval;
                    }
                    if (state.backtracking == 0) {
                        stream_pquery.add(pquery6.getTree());
                    }
                    // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:53:19: ( modifier )?
                    int alt4 = 2;
                    int LA4_0 = input.LA(1);

                    if ((LA4_0 == MODE || LA4_0 == MODO)) {
                        alt4 = 1;
                    }
                    switch (alt4) {
                        case 1: // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:0:0: modifier
                        {
                            pushFollow(FOLLOW_modifier_in_squery140);
                            modifier7 = modifier();

                            state._fsp--;
                            if (state.failed) {
                                return retval;
                            }
                            if (state.backtracking == 0) {
                                stream_modifier.add(modifier7.getTree());
                            }

                        }
                        break;

                    }

                    EOF8 = (Token) match(input, EOF, FOLLOW_EOF_in_squery143);
                    if (state.failed) {
                        return retval;
                    }
                    if (state.backtracking == 0) {
                        stream_EOF.add(EOF8);
                    }



                    // AST REWRITE
                    // elements: pquery, limiter, modifier
                    // token labels:
                    // rule labels: retval
                    // token list labels:
                    // rule list labels:
                    // wildcard labels:
                    if (state.backtracking == 0) {
                        retval.tree = root_0;
                        RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                        root_0 = (Object) adaptor.nil();
                        // 53:33: -> ^( SELECT ( limiter )? pquery ( modifier )? )
                        {
                            // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:53:36: ^( SELECT ( limiter )? pquery ( modifier )? )
                            {
                                Object root_1 = (Object) adaptor.nil();
                                root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(SELECT, "SELECT"), root_1);

                                // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:53:45: ( limiter )?
                                if (stream_limiter.hasNext()) {
                                    adaptor.addChild(root_1, stream_limiter.nextTree());

                                }
                                stream_limiter.reset();
                                adaptor.addChild(root_1, stream_pquery.nextTree());
                                // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:53:61: ( modifier )?
                                if (stream_modifier.hasNext()) {
                                    adaptor.addChild(root_1, stream_modifier.nextTree());

                                }
                                stream_modifier.reset();

                                adaptor.addChild(root_0, root_1);
                            }

                        }

                        retval.tree = root_0;
                    }
                }
                break;

            }
            retval.stop = input.LT(-1);

            if (state.backtracking == 0) {

                retval.tree = (Object) adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
        }
        return retval;
    }
    // $ANTLR end "squery"

    public static class limiter_return extends ParserRuleReturnScope {

        Object tree;

        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "limiter"
    // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:57:1: limiter : NUM -> ^( LIMIT NUM ) ;
    public final ComplexParser.limiter_return limiter() throws RecognitionException {
        ComplexParser.limiter_return retval = new ComplexParser.limiter_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NUM9 = null;

        Object NUM9_tree = null;
        RewriteRuleTokenStream stream_NUM = new RewriteRuleTokenStream(adaptor, "token NUM");

        try {
            // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:58:1: ( NUM -> ^( LIMIT NUM ) )
            // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:58:3: NUM
            {
                NUM9 = (Token) match(input, NUM, FOLLOW_NUM_in_limiter168);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    stream_NUM.add(NUM9);
                }



                // AST REWRITE
                // elements: NUM
                // token labels:
                // rule labels: retval
                // token list labels:
                // rule list labels:
                // wildcard labels:
                if (state.backtracking == 0) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                    root_0 = (Object) adaptor.nil();
                    // 58:7: -> ^( LIMIT NUM )
                    {
                        // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:58:10: ^( LIMIT NUM )
                        {
                            Object root_1 = (Object) adaptor.nil();
                            root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(LIMIT, "LIMIT"), root_1);

                            adaptor.addChild(root_1, stream_NUM.nextNode());

                            adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                }
            }

            retval.stop = input.LT(-1);

            if (state.backtracking == 0) {

                retval.tree = (Object) adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
        }
        return retval;
    }
    // $ANTLR end "limiter"

    public static class modifier_return extends ParserRuleReturnScope {

        Object tree;

        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "modifier"
    // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:64:1: modifier : ( ordterm ( offsetterm )? | offsetterm );
    public final ComplexParser.modifier_return modifier() throws RecognitionException {
        ComplexParser.modifier_return retval = new ComplexParser.modifier_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ComplexParser.ordterm_return ordterm10 = null;

        ComplexParser.offsetterm_return offsetterm11 = null;

        ComplexParser.offsetterm_return offsetterm12 = null;



        try {
            // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:65:1: ( ordterm ( offsetterm )? | offsetterm )
            int alt7 = 2;
            int LA7_0 = input.LA(1);

            if ((LA7_0 == MODO)) {
                alt7 = 1;
            } else if ((LA7_0 == MODE)) {
                alt7 = 2;
            } else {
                if (state.backtracking > 0) {
                    state.failed = true;
                    return retval;
                }
                NoViableAltException nvae =
                        new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1: // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:65:3: ordterm ( offsetterm )?
                {
                    root_0 = (Object) adaptor.nil();

                    pushFollow(FOLLOW_ordterm_in_modifier187);
                    ordterm10 = ordterm();

                    state._fsp--;
                    if (state.failed) {
                        return retval;
                    }
                    if (state.backtracking == 0) {
                        adaptor.addChild(root_0, ordterm10.getTree());
                    }
                    // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:65:11: ( offsetterm )?
                    int alt6 = 2;
                    int LA6_0 = input.LA(1);

                    if ((LA6_0 == MODE)) {
                        alt6 = 1;
                    }
                    switch (alt6) {
                        case 1: // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:0:0: offsetterm
                        {
                            pushFollow(FOLLOW_offsetterm_in_modifier189);
                            offsetterm11 = offsetterm();

                            state._fsp--;
                            if (state.failed) {
                                return retval;
                            }
                            if (state.backtracking == 0) {
                                adaptor.addChild(root_0, offsetterm11.getTree());
                            }

                        }
                        break;

                    }


                }
                break;
                case 2: // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:66:3: offsetterm
                {
                    root_0 = (Object) adaptor.nil();

                    pushFollow(FOLLOW_offsetterm_in_modifier194);
                    offsetterm12 = offsetterm();

                    state._fsp--;
                    if (state.failed) {
                        return retval;
                    }
                    if (state.backtracking == 0) {
                        adaptor.addChild(root_0, offsetterm12.getTree());
                    }

                }
                break;

            }
            retval.stop = input.LT(-1);

            if (state.backtracking == 0) {

                retval.tree = (Object) adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
        }
        return retval;
    }
    // $ANTLR end "modifier"

    public static class offsetterm_return extends ParserRuleReturnScope {

        Object tree;

        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "offsetterm"
    // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:70:1: offsetterm : MODE NUM -> ^( OFFSET NUM ) ;
    public final ComplexParser.offsetterm_return offsetterm() throws RecognitionException {
        ComplexParser.offsetterm_return retval = new ComplexParser.offsetterm_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token MODE13 = null;
        Token NUM14 = null;

        Object MODE13_tree = null;
        Object NUM14_tree = null;
        RewriteRuleTokenStream stream_MODE = new RewriteRuleTokenStream(adaptor, "token MODE");
        RewriteRuleTokenStream stream_NUM = new RewriteRuleTokenStream(adaptor, "token NUM");

        try {
            // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:71:1: ( MODE NUM -> ^( OFFSET NUM ) )
            // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:71:3: MODE NUM
            {
                MODE13 = (Token) match(input, MODE, FOLLOW_MODE_in_offsetterm205);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    stream_MODE.add(MODE13);
                }

                NUM14 = (Token) match(input, NUM, FOLLOW_NUM_in_offsetterm207);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    stream_NUM.add(NUM14);
                }



                // AST REWRITE
                // elements: NUM
                // token labels:
                // rule labels: retval
                // token list labels:
                // rule list labels:
                // wildcard labels:
                if (state.backtracking == 0) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                    root_0 = (Object) adaptor.nil();
                    // 71:12: -> ^( OFFSET NUM )
                    {
                        // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:71:15: ^( OFFSET NUM )
                        {
                            Object root_1 = (Object) adaptor.nil();
                            root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(OFFSET, "OFFSET"), root_1);

                            adaptor.addChild(root_1, stream_NUM.nextNode());

                            adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                }
            }

            retval.stop = input.LT(-1);

            if (state.backtracking == 0) {

                retval.tree = (Object) adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
        }
        return retval;
    }
    // $ANTLR end "offsetterm"

    public static class ordterm_return extends ParserRuleReturnScope {

        Object tree;

        public Object getTree() {
            return tree;
        }
    };

    // $ANTLR start "ordterm"
    // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:75:1: ordterm : MODO LPAR plist RPAR -> ^( ORDER plist ) ;
    public final ComplexParser.ordterm_return ordterm() throws RecognitionException {
        ComplexParser.ordterm_return retval = new ComplexParser.ordterm_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token MODO15 = null;
        Token LPAR16 = null;
        Token RPAR18 = null;
        ComplexParser.plist_return plist17 = null;


        Object MODO15_tree = null;
        Object LPAR16_tree = null;
        Object RPAR18_tree = null;
        RewriteRuleTokenStream stream_MODO = new RewriteRuleTokenStream(adaptor, "token MODO");
        RewriteRuleTokenStream stream_RPAR = new RewriteRuleTokenStream(adaptor, "token RPAR");
        RewriteRuleTokenStream stream_LPAR = new RewriteRuleTokenStream(adaptor, "token LPAR");
        RewriteRuleSubtreeStream stream_plist = new RewriteRuleSubtreeStream(adaptor, "rule plist");
        try {
            // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:76:1: ( MODO LPAR plist RPAR -> ^( ORDER plist ) )
            // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:76:3: MODO LPAR plist RPAR
            {
                MODO15 = (Token) match(input, MODO, FOLLOW_MODO_in_ordterm226);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    stream_MODO.add(MODO15);
                }

                LPAR16 = (Token) match(input, LPAR, FOLLOW_LPAR_in_ordterm228);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    stream_LPAR.add(LPAR16);
                }

                pushFollow(FOLLOW_plist_in_ordterm230);
                plist17 = plist();

                state._fsp--;
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    stream_plist.add(plist17.getTree());
                }
                RPAR18 = (Token) match(input, RPAR, FOLLOW_RPAR_in_ordterm232);
                if (state.failed) {
                    return retval;
                }
                if (state.backtracking == 0) {
                    stream_RPAR.add(RPAR18);
                }



                // AST REWRITE
                // elements: plist
                // token labels:
                // rule labels: retval
                // token list labels:
                // rule list labels:
                // wildcard labels:
                if (state.backtracking == 0) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                    root_0 = (Object) adaptor.nil();
                    // 76:24: -> ^( ORDER plist )
                    {
                        // /home/hasdai/Documentos/INFOTEC/ComplexParser.g:76:27: ^( ORDER plist )
                        {
                            Object root_1 = (Object) adaptor.nil();
                            root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(ORDER, "ORDER"), root_1);

                            adaptor.addChild(root_1, stream_plist.nextTree());

                            adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                }
            }

            retval.stop = input.LT(-1);

            if (state.backtracking == 0) {

                retval.tree = (Object) adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
        }
        return retval;
    }
    // $ANTLR end "ordterm"

    public static class oquery_return extends ParserRuleReturnScope {

        Object tree;

        public Object getTree() {
            return tree;
        }
    };
